--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "laravelcollective/html": "5.3.*"
+        "laravelcollective/html": "5.3.*",
+        "mews/purifier": "^2.0",
+        "intervention/image": "^2.3"
         
 
     },
