--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.*",
         "mews/purifier": "^2.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "filp/whoops": "^2.1"
         
 
     },
